[gd_scene load_steps=9 format=3 uid="uid://drp484ne1xpxt"]

[ext_resource type="Theme" uid="uid://85byrm5eq3ab" path="res://theme/theme.tres" id="1_ikrn2"]
[ext_resource type="Script" path="res://pages/workshop/part_inspector/part_inspector.gd" id="1_v4omk"]
[ext_resource type="PackedScene" uid="uid://uk8tpg655i5w" path="res://common/interface/craft_part_display/craft_part_display.tscn" id="1_yodry"]
[ext_resource type="Texture2D" uid="uid://cy854js4gmuv8" path="res://assets/images/icons/core.png" id="2_w5n4u"]
[ext_resource type="Texture2D" uid="uid://do6ocyo4yi4oe" path="res://assets/images/icons/hull.png" id="3_l8vfu"]
[ext_resource type="Texture2D" uid="uid://hlcyw0kime5w" path="res://assets/images/gimmicks/bullet.png" id="3_r7jxd"]

[sub_resource type="LabelSettings" id="LabelSettings_xs2y1"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5imv"]
content_margin_top = 2.0
content_margin_right = 30.0
content_margin_bottom = 2.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="PartInspector" type="PanelContainer"]
custom_minimum_size = Vector2(360, 0)
theme = ExtResource("1_ikrn2")
script = ExtResource("1_v4omk")

[node name="Container" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Image" type="Control" parent="Container"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Container/Image"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CraftPartDisplay" parent="Container/Image" instance=ExtResource("1_yodry")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Details" type="Control" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Details"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="Container/Details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Part Name"
label_settings = SubResource("LabelSettings_xs2y1")

[node name="GimmickLabelContainer" type="HBoxContainer" parent="Container/Details/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GimmickIcon" type="TextureRect" parent="Container/Details/VBoxContainer/GimmickLabelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_r7jxd")
expand_mode = 1
stretch_mode = 5

[node name="GimmickLabel" type="Label" parent="Container/Details/VBoxContainer/GimmickLabelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bullet"
vertical_alignment = 1

[node name="GimmickOptions" type="OptionButton" parent="Container/Details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u5imv")
theme_override_styles/hover = SubResource("StyleBoxFlat_u5imv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u5imv")
flat = true
expand_icon = true
item_count = 1
selected = 0
popup/item_0/text = "Gimmick"
popup/item_0/icon = ExtResource("3_r7jxd")
popup/item_0/id = 0

[node name="Control" type="Control" parent="Container/Details/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Details/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="Container/Details/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(23, 20)
layout_mode = 2
texture = ExtResource("2_w5n4u")
expand_mode = 1
stretch_mode = 5

[node name="CoreLabel" type="Label" parent="Container/Details/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "20"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/Details/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="Container/Details/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(23, 20)
layout_mode = 2
texture = ExtResource("3_l8vfu")
expand_mode = 1
stretch_mode = 5

[node name="HullLabel" type="Label" parent="Container/Details/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "20"
vertical_alignment = 1

[connection signal="item_selected" from="Container/Details/VBoxContainer/GimmickOptions" to="." method="_on_gimmick_options_item_selected"]
